conta palavras feito

--- a/projeto_spark.ipynb
+++ b/projeto_spark.ipynb
@@ -110,9 +110,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f6d1b7f8-ddc9-43b0-adbd-2b6e5aad182c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import pyspark\n",
@@ -134,10 +136,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5214f8ff-9df1-4817-9e08-c1755470f3b6",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div>\n",
+       "            <p><b>SparkContext</b></p>\n",
+       "\n",
+       "            <p><a href=\"http://97110647295d:4040\">Spark UI</a></p>\n",
+       "\n",
+       "            <dl>\n",
+       "              <dt>Version</dt>\n",
+       "                <dd><code>v3.4.0</code></dd>\n",
+       "              <dt>Master</dt>\n",
+       "                <dd><code>local[*]</code></dd>\n",
+       "              <dt>AppName</dt>\n",
+       "                <dd><code>Minha aplicação</code></dd>\n",
+       "            </dl>\n",
+       "        </div>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<SparkContext master=local[*] appName=Minha aplicação>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sc"
    ]
@@ -170,9 +203,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fe7fda56-bf06-4309-a265-26e553e20b94",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def parse_line(line):\n",
@@ -182,25 +217,53 @@
     "    body = parts[2].replace('\"\"', '\"')\n",
     "    return (sentiment, title, body)\n",
     "\n",
-    "rdd = sc.textFile('train.csv').map(parse_line)"
+    "rdd = sc.textFile('data/train.csv').map(parse_line)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "900ea746-984c-405b-a449-d6cf8885525e",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3600000"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rdd.count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e83f38e5-3d7b-4261-8ab3-caadb39d6076",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(2,\n",
+       "  'Stuning even for the non-gamer',\n",
+       "  'This sound track was beautiful! It paints the senery in your mind so well I would recomend it even to people who hate vid. game music! I have played the game Chrono Cross but out of all of the games I have ever played it has the best music! It backs away from crude keyboarding and takes a fresher step with grate guitars and soulful orchestras. It would impress anyone who cares to listen! ^_^')]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rdd.take(1)"
    ]
@@ -215,9 +278,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "39938d62-bc17-4243-a9e8-3fed9c8d2bd9",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "rdd.saveAsPickleFile('reviews.pickle')"
@@ -241,9 +306,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9107ce80-0447-41d7-8f83-d96f0680d8fd",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "rdd = sc.pickleFile('reviews.pickle')"
@@ -251,20 +318,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ae84b476-b262-496f-93b0-19386fa9f29c",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3600000"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rdd.count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "607f7afa-43e7-4b82-bffc-7c1cca0536ae",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(2,\n",
+       "  'Stuning even for the non-gamer',\n",
+       "  'This sound track was beautiful! It paints the senery in your mind so well I would recomend it even to people who hate vid. game music! I have played the game Chrono Cross but out of all of the games I have ever played it has the best music! It backs away from crude keyboarding and takes a fresher step with grate guitars and soulful orchestras. It would impress anyone who cares to listen! ^_^')]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rdd.take(1)"
    ]
@@ -303,11 +398,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6bb48e97-e57d-4b6a-9b27-b52cd9c3d195",
-   "metadata": {},
+   "execution_count": 38,
+   "id": "ad047de1-c29b-4b34-a4ce-b73f5c720207",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "import string\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "6bb48e97-e57d-4b6a-9b27-b52cd9c3d195",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def separa_em_palavras(item):\n",
+    "    titulo = item[1]\n",
+    "    corpo = item[2]\n",
+    "    return titulo.split() + corpo.split()\n",
+    "\n",
+    "def sem_pontuacao(x):\n",
+    "    for c in x:\n",
+    "        if c in string.punctuation:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "def contagem(rdd_original):\n",
+    "    rdd_split = rdd_original \\\n",
+    "        .flatMap(separa_em_palavras) \\\n",
+    "        .filter(sem_pontuacao)\\\n",
+    "        .map(lambda x: (x, 1)) \\\n",
+    "        .reduceByKey(lambda x, y: x + y)\n",
+    "    return rdd_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "d3cb1eb5-de74-4d00-89a6-7ede49adcc20",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('the', 12139207),\n",
+       " ('and', 7334968),\n",
+       " ('I', 6808609),\n",
+       " ('to', 6731112),\n",
+       " ('a', 6697344),\n",
+       " ('of', 5534305),\n",
+       " ('is', 4785941),\n",
+       " ('it', 3830950),\n",
+       " ('this', 3770739),\n",
+       " ('in', 3041740)]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdd_split = contagem(rdd)\n",
+    "rdd_split.takeOrdered(10, lambda x: -x[1])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -331,7 +494,9 @@
    "id": "ca379b49-a447-4ecf-9946-6c408e2adc97",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def log"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -537,7 +702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.10.11"
   },
   "vscode": {
    "interpreter": {
