--- a/projeto_spark.ipynb
+++ b/projeto_spark.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f6d1b7f8-ddc9-43b0-adbd-2b6e5aad182c",
    "metadata": {
     "tags": []
@@ -297,6 +297,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ad047de1-c29b-4b34-a4ce-b73f5c720207",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import string\n",
+    "import math\n",
+    "import pyspark\n",
+    "\n",
+    "conf = pyspark.SparkConf()\n",
+    "conf.setAppName('Minha aplicação')\n",
+    "conf.setMaster('local[*]')\n",
+    "\n",
+    "sc = pyspark.SparkContext(conf=conf)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5a9ef2e6-ac48-46ad-b538-920c17aff6dc",
    "metadata": {},
@@ -306,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "9107ce80-0447-41d7-8f83-d96f0680d8fd",
    "metadata": {
     "tags": []
@@ -318,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "ae84b476-b262-496f-93b0-19386fa9f29c",
    "metadata": {
     "tags": []
@@ -330,7 +350,7 @@
        "3600000"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "607f7afa-43e7-4b82-bffc-7c1cca0536ae",
    "metadata": {
     "tags": []
@@ -355,7 +375,7 @@
        "  'This sound track was beautiful! It paints the senery in your mind so well I would recomend it even to people who hate vid. game music! I have played the game Chrono Cross but out of all of the games I have ever played it has the best music! It backs away from crude keyboarding and takes a fresher step with grate guitars and soulful orchestras. It would impress anyone who cares to listen! ^_^')]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,20 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "ad047de1-c29b-4b34-a4ce-b73f5c720207",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import string\n",
-    "import math"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "id": "6bb48e97-e57d-4b6a-9b27-b52cd9c3d195",
    "metadata": {
     "tags": []
@@ -441,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "id": "d3cb1eb5-de74-4d00-89a6-7ede49adcc20",
    "metadata": {
     "tags": []
@@ -462,7 +469,7 @@
        " ('in', 3041740)]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,12 +497,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "ca379b49-a447-4ecf-9946-6c408e2adc97",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "241545020\n"
+     ]
+    }
+   ],
+   "source": [
+    "def contagem_total(rdd_original):\n",
+    "    contagem = rdd_original \\\n",
+    "                .flatMap(separa_em_palavras) \\\n",
+    "                .filter(sem_pontuacao)\\\n",
+    "                .count()\n",
+    "    return contagem\n",
+    "\n",
+    "T = contagem_total(rdd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "61f58793-ec28-46e6-bccb-513c6c88443d",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "def log"
+    "def log_contagem(rdd_split):\n",
+    "    rdd_log = rdd_split \\\n",
+    "                .map(lambda x: (x[0], math.log(x[1]/T, 10)))\n",
+    "    return rdd_log\n",
+    "\n",
+    "rdd_log = log_contagem(rdd_split)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "992d7d88-a78b-4a42-9fd2-32ba5a7f50a4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('the', -1.29880777079292),\n",
+       " ('and', -1.5175998644436777),\n",
+       " ('I', -1.5499396934092988),\n",
+       " ('to', -1.5549112710372188),\n",
+       " ('a', -1.5570954814895615),\n",
+       " ('of', -1.6399349981635654),\n",
+       " ('is', -1.7030307475201514),\n",
+       " ('it', -1.7996916041609894),\n",
+       " ('this', -1.8065716151488604),\n",
+       " ('in', -1.8998759990021479)]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdd_log.takeOrdered(10, lambda x: -x[1])"
    ]
   },
   {
