--- a/projeto_spark.ipynb
+++ b/projeto_spark.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f6d1b7f8-ddc9-43b0-adbd-2b6e5aad182c",
    "metadata": {
     "tags": []
@@ -136,41 +136,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5214f8ff-9df1-4817-9e08-c1755470f3b6",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <div>\n",
-       "            <p><b>SparkContext</b></p>\n",
-       "\n",
-       "            <p><a href=\"http://97110647295d:4040\">Spark UI</a></p>\n",
-       "\n",
-       "            <dl>\n",
-       "              <dt>Version</dt>\n",
-       "                <dd><code>v3.4.0</code></dd>\n",
-       "              <dt>Master</dt>\n",
-       "                <dd><code>local[*]</code></dd>\n",
-       "              <dt>AppName</dt>\n",
-       "                <dd><code>Minha aplicação</code></dd>\n",
-       "            </dl>\n",
-       "        </div>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<SparkContext master=local[*] appName=Minha aplicação>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sc"
    ]
@@ -203,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "fe7fda56-bf06-4309-a265-26e553e20b94",
    "metadata": {
     "tags": []
@@ -222,48 +193,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "900ea746-984c-405b-a449-d6cf8885525e",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3600000"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rdd.count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e83f38e5-3d7b-4261-8ab3-caadb39d6076",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(2,\n",
-       "  'Stuning even for the non-gamer',\n",
-       "  'This sound track was beautiful! It paints the senery in your mind so well I would recomend it even to people who hate vid. game music! I have played the game Chrono Cross but out of all of the games I have ever played it has the best music! It backs away from crude keyboarding and takes a fresher step with grate guitars and soulful orchestras. It would impress anyone who cares to listen! ^_^')]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rdd.take(1)"
    ]
@@ -278,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "39938d62-bc17-4243-a9e8-3fed9c8d2bd9",
    "metadata": {
     "tags": []
@@ -298,12 +245,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ad047de1-c29b-4b34-a4ce-b73f5c720207",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Cannot run multiple SparkContexts at once; existing SparkContext(app=Minha aplicação, master=local[*]) created by __init__ at /tmp/ipykernel_4390/3995438931.py:9 ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m conf\u001b[38;5;241m.\u001b[39msetAppName(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMinha aplicação\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      7\u001b[0m conf\u001b[38;5;241m.\u001b[39msetMaster(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlocal[*]\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 9\u001b[0m sc \u001b[38;5;241m=\u001b[39m \u001b[43mpyspark\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mSparkContext\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconf\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mconf\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/usr/local/spark/python/pyspark/context.py:198\u001b[0m, in \u001b[0;36mSparkContext.__init__\u001b[0;34m(self, master, appName, sparkHome, pyFiles, environment, batchSize, serializer, conf, gateway, jsc, profiler_cls, udf_profiler_cls, memory_profiler_cls)\u001b[0m\n\u001b[1;32m    192\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m gateway \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m gateway\u001b[38;5;241m.\u001b[39mgateway_parameters\u001b[38;5;241m.\u001b[39mauth_token \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    193\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    194\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mYou are trying to pass an insecure Py4j gateway to Spark. This\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    195\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m is not allowed as it is a security risk.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    196\u001b[0m     )\n\u001b[0;32m--> 198\u001b[0m \u001b[43mSparkContext\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_ensure_initialized\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgateway\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mgateway\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconf\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mconf\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    199\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    200\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_do_init(\n\u001b[1;32m    201\u001b[0m         master,\n\u001b[1;32m    202\u001b[0m         appName,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    212\u001b[0m         memory_profiler_cls,\n\u001b[1;32m    213\u001b[0m     )\n",
+      "File \u001b[0;32m/usr/local/spark/python/pyspark/context.py:445\u001b[0m, in \u001b[0;36mSparkContext._ensure_initialized\u001b[0;34m(cls, instance, gateway, conf)\u001b[0m\n\u001b[1;32m    442\u001b[0m     callsite \u001b[38;5;241m=\u001b[39m SparkContext\u001b[38;5;241m.\u001b[39m_active_spark_context\u001b[38;5;241m.\u001b[39m_callsite\n\u001b[1;32m    444\u001b[0m     \u001b[38;5;66;03m# Raise error if there is already a running Spark context\u001b[39;00m\n\u001b[0;32m--> 445\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    446\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCannot run multiple SparkContexts at once; \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    447\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexisting SparkContext(app=\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m, master=\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    448\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m created by \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m at \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m:\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    449\u001b[0m         \u001b[38;5;241m%\u001b[39m (\n\u001b[1;32m    450\u001b[0m             currentAppName,\n\u001b[1;32m    451\u001b[0m             currentMaster,\n\u001b[1;32m    452\u001b[0m             callsite\u001b[38;5;241m.\u001b[39mfunction,\n\u001b[1;32m    453\u001b[0m             callsite\u001b[38;5;241m.\u001b[39mfile,\n\u001b[1;32m    454\u001b[0m             callsite\u001b[38;5;241m.\u001b[39mlinenum,\n\u001b[1;32m    455\u001b[0m         )\n\u001b[1;32m    456\u001b[0m     )\n\u001b[1;32m    457\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    458\u001b[0m     SparkContext\u001b[38;5;241m.\u001b[39m_active_spark_context \u001b[38;5;241m=\u001b[39m instance\n",
+      "\u001b[0;31mValueError\u001b[0m: Cannot run multiple SparkContexts at once; existing SparkContext(app=Minha aplicação, master=local[*]) created by __init__ at /tmp/ipykernel_4390/3995438931.py:9 "
+     ]
+    }
+   ],
    "source": [
     "import string\n",
     "import math\n",
@@ -326,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "9107ce80-0447-41d7-8f83-d96f0680d8fd",
    "metadata": {
     "tags": []
@@ -338,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "ae84b476-b262-496f-93b0-19386fa9f29c",
    "metadata": {
     "tags": []
@@ -350,7 +311,7 @@
        "3600000"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "607f7afa-43e7-4b82-bffc-7c1cca0536ae",
    "metadata": {
     "tags": []
@@ -375,7 +336,7 @@
        "  'This sound track was beautiful! It paints the senery in your mind so well I would recomend it even to people who hate vid. game music! I have played the game Chrono Cross but out of all of the games I have ever played it has the best music! It backs away from crude keyboarding and takes a fresher step with grate guitars and soulful orchestras. It would impress anyone who cares to listen! ^_^')]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +356,9 @@
   {
    "cell_type": "markdown",
    "id": "69bac409-7181-49c4-b555-73d3e9ff71f2",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Fase 1"
    ]
@@ -418,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "6bb48e97-e57d-4b6a-9b27-b52cd9c3d195",
    "metadata": {
     "tags": []
@@ -448,35 +411,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "d3cb1eb5-de74-4d00-89a6-7ede49adcc20",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('the', 12139207),\n",
-       " ('and', 7334968),\n",
-       " ('I', 6808609),\n",
-       " ('to', 6731112),\n",
-       " ('a', 6697344),\n",
-       " ('of', 5534305),\n",
-       " ('is', 4785941),\n",
-       " ('it', 3830950),\n",
-       " ('this', 3770739),\n",
-       " ('in', 3041740)]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rdd_split = contagem(rdd)\n",
-    "rdd_split.takeOrdered(10, lambda x: -x[1])"
+    "# rdd_split.take(10)"
    ]
   },
   {
@@ -497,20 +440,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "ca379b49-a447-4ecf-9946-6c408e2adc97",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "241545020\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def contagem_total(rdd_original):\n",
     "    contagem = rdd_original \\\n",
@@ -524,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "61f58793-ec28-46e6-bccb-513c6c88443d",
    "metadata": {
     "tags": []
@@ -541,34 +476,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "992d7d88-a78b-4a42-9fd2-32ba5a7f50a4",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('the', -1.29880777079292),\n",
-       " ('and', -1.5175998644436777),\n",
-       " ('I', -1.5499396934092988),\n",
-       " ('to', -1.5549112710372188),\n",
-       " ('a', -1.5570954814895615),\n",
-       " ('of', -1.6399349981635654),\n",
-       " ('is', -1.7030307475201514),\n",
-       " ('it', -1.7996916041609894),\n",
-       " ('this', -1.8065716151488604),\n",
-       " ('in', -1.8998759990021479)]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "rdd_log.takeOrdered(10, lambda x: -x[1])"
+    "# rdd_log.take(10)"
    ]
   },
   {
@@ -589,11 +504,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "987554e0-0a16-4827-9cc3-7c21063b1f8e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('out', -2.6268343001324577)]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdd_positivo = rdd \\\n",
+    "    .filter(lambda x: x[0] == 2)\n",
+    "\n",
+    "rdd_negativo = rdd \\\n",
+    "    .filter(lambda x: x[0] == 1)\n",
+    "\n",
+    "#Processo positivo\n",
+    "T = contagem_total(rdd_positivo)\n",
+    "rdd_positivo = contagem(rdd_positivo)\n",
+    "rdd_positivo = log_contagem(rdd_positivo)\n",
+    "\n",
+    "#Processo negativo\n",
+    "T = contagem_total(rdd_negativo)\n",
+    "rdd_negativo = contagem(rdd_negativo)\n",
+    "rdd_negativo = log_contagem(rdd_negativo)\n",
+    "\n",
+    "rdd_positivo.take(1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -613,11 +559,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "0b599156-e71d-46b4-9499-8d2dfe072512",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('out', (-2.6268343001324577, -2.5276951908083563)),\n",
+       " ('family', (-3.4450841714726113, -3.852019458860614)),\n",
+       " ('start', (-3.5342377371025124, -3.5939165435118623)),\n",
+       " ('willing', (-4.430995450302841, -4.293322053616597)),\n",
+       " ('Electronics', (-5.8102729258368315, -5.4831774397339235)),\n",
+       " ('gift', (-3.5794554451379814, -3.847410736303814)),\n",
+       " ('southside', (-6.755651974944851, -7.098074655767058)),\n",
+       " ('guest', (-4.716237855768714, -4.913099465068797)),\n",
+       " ('cute', (-4.020234553032064, -4.13306120549481)),\n",
+       " ('JMM', (-7.620953401047395, None))]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdd_unificado = rdd_positivo.fullOuterJoin(rdd_negativo).collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "6c8a5b7f-73ec-4e12-8954-1bf85db13cf1",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('out', (-2.6268343001324577, -2.5276951908083563)),\n",
+       " ('family', (-3.4450841714726113, -3.852019458860614)),\n",
+       " ('start', (-3.5342377371025124, -3.5939165435118623)),\n",
+       " ('willing', (-4.430995450302841, -4.293322053616597)),\n",
+       " ('Electronics', (-5.8102729258368315, -5.4831774397339235)),\n",
+       " ('gift', (-3.5794554451379814, -3.847410736303814)),\n",
+       " ('southside', (-6.755651974944851, -7.098074655767058)),\n",
+       " ('guest', (-4.716237855768714, -4.913099465068797)),\n",
+       " ('cute', (-4.020234553032064, -4.13306120549481)),\n",
+       " ('JMM', (-7.620953401047395, None))]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdd_unificado[:10]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -641,7 +643,10 @@
    "id": "f2f68949-61c8-46b4-a39e-bcfb3872c4fd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def naive(rdd):\n",
+    "    frase = rdd.flatMap(separa_em_palavras).filter(sem_pontuacao)"
+   ]
   },
   {
    "cell_type": "markdown",
