--- a/projeto_spark.ipynb
+++ b/projeto_spark.ipynb
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ad047de1-c29b-4b34-a4ce-b73f5c720207",
    "metadata": {
     "tags": []
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "9107ce80-0447-41d7-8f83-d96f0680d8fd",
    "metadata": {
     "tags": []
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "ae84b476-b262-496f-93b0-19386fa9f29c",
    "metadata": {
     "tags": []
@@ -297,7 +297,7 @@
        "3600000"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "607f7afa-43e7-4b82-bffc-7c1cca0536ae",
    "metadata": {
     "tags": []
@@ -322,7 +322,7 @@
        "  'This sound track was beautiful! It paints the senery in your mind so well I would recomend it even to people who hate vid. game music! I have played the game Chrono Cross but out of all of the games I have ever played it has the best music! It backs away from crude keyboarding and takes a fresher step with grate guitars and soulful orchestras. It would impress anyone who cares to listen! ^_^')]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "6bb48e97-e57d-4b6a-9b27-b52cd9c3d195",
    "metadata": {
     "tags": []
@@ -395,32 +395,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "d3cb1eb5-de74-4d00-89a6-7ede49adcc20",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('the', 12139207),\n",
-       " ('and', 7334968),\n",
-       " ('I', 6808609),\n",
-       " ('to', 6731112),\n",
-       " ('a', 6697344),\n",
-       " ('of', 5534305),\n",
-       " ('is', 4785941),\n",
-       " ('it', 3830950),\n",
-       " ('this', 3770739),\n",
-       " ('in', 3041740)]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rdd_split = contagem(rdd)\n",
     "rdd_split.takeOrdered(10, lambda x: -x[1])"
@@ -456,57 +436,46 @@
     "                .flatMap(separa_em_palavras) \\\n",
     "                .filter(sem_pontuacao)\\\n",
     "                .count()\n",
-    "    return contagem\n",
-    "\n",
-    "T = contagem_total(rdd)"
+    "    return contagem"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "8f077711-8a4c-4287-a811-3162efe5425b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "T_original = contagem_total(rdd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "61f58793-ec28-46e6-bccb-513c6c88443d",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "def log_contagem(rdd_split):\n",
+    "def log_contagem(rdd_split, T):\n",
     "    rdd_log = rdd_split \\\n",
     "                .map(lambda x: (x[0], math.log(x[1]/T, 10)))\n",
-    "    return rdd_log\n",
-    "\n",
-    "rdd_log = log_contagem(rdd_split)"
+    "    return rdd_log"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "992d7d88-a78b-4a42-9fd2-32ba5a7f50a4",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('the', -1.29880777079292),\n",
-       " ('and', -1.5175998644436777),\n",
-       " ('I', -1.5499396934092988),\n",
-       " ('to', -1.5549112710372188),\n",
-       " ('a', -1.5570954814895615),\n",
-       " ('of', -1.6399349981635654),\n",
-       " ('is', -1.7030307475201514),\n",
-       " ('it', -1.7996916041609894),\n",
-       " ('this', -1.8065716151488604),\n",
-       " ('in', -1.8998759990021479)]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "rdd_log = log_contagem(rdd_split, T_original)\n",
     "rdd_log.takeOrdered(10, lambda x: -x[1])"
    ]
   },
@@ -528,11 +497,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "987554e0-0a16-4827-9cc3-7c21063b1f8e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "rdd_positivos = rdd.filter(lambda x: x[0] == 2)\n",
+    "rdd_negativos = rdd.filter(lambda x: x[0] == 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "86a2bd1c-5408-4e9c-91ba-274835dad2b0",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "rdd_positivos_split = contagem(rdd_positivos)\n",
+    "T_positivos = contagem_total(rdd_positivos)\n",
+    "rdd_positivos_log = log_contagem(rdd_positivos_split, T_positivos)\n",
+    "\n",
+    "rdd_negativos_split = contagem(rdd_negativos)\n",
+    "T_negativos = contagem_total(rdd_negativos)\n",
+    "rdd_negativos_log = log_contagem(rdd_negativos_split, T_negativos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f902d80e-d348-43e0-8329-bfcd9196a75b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('the', -1.3087279254776858),\n",
+       " ('and', -1.4742870907750345),\n",
+       " ('a', -1.5427896991860932),\n",
+       " ('to', -1.5616817902847964),\n",
+       " ('I', -1.5786329779030477),\n",
+       " ('of', -1.6190216986647599),\n",
+       " ('is', -1.670517375538686),\n",
+       " ('this', -1.8268730410869245),\n",
+       " ('it', -1.8354341370011509),\n",
+       " ('in', -1.8720079472596638)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdd_positivos_log.takeOrdered(10, lambda x: -x[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "e7b1c57c-7ac7-417c-abfd-a09fd35733b6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('the', -1.2898080994079197),\n",
+       " ('I', -1.5249296734506503),\n",
+       " ('to', -1.5487266713273227),\n",
+       " ('and', -1.5620264300551518),\n",
+       " ('a', -1.5707942641431285),\n",
+       " ('of', -1.6602686209170103),\n",
+       " ('is', -1.7355192392404242),\n",
+       " ('it', -1.7689899474700645),\n",
+       " ('this', -1.788560315647327),\n",
+       " ('in', -1.9274169739438267)]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdd_negativos_log.takeOrdered(10, lambda x: -x[1])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -552,11 +608,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "0b599156-e71d-46b4-9499-8d2dfe072512",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "rdd_outer_joined = rdd_positivos_log.fullOuterJoin(rdd_negativos_log).collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "05ef84c0-bf17-4b07-b239-87d231aeaed4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('out', (-2.5940007500305606, -2.5276951908083563)),\n",
+       " ('family', (-3.4122506213707133, -3.852019458860614)),\n",
+       " ('start', (-3.5014041870006154, -3.5939165435118623)),\n",
+       " ('willing', (-4.398161900200943, -4.293322053616597)),\n",
+       " ('Electronics', (-5.777439375734934, -5.4831774397339235)),\n",
+       " ('gift', (-3.546621895036084, -3.847410736303814)),\n",
+       " ('southside', (-6.722818424842954, -7.098074655767058)),\n",
+       " ('guest', (-4.683404305666817, -4.913099465068797)),\n",
+       " ('cute', (-3.987401002930166, -4.13306120549481)),\n",
+       " ('JMM', (-7.588119850945497, None))]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdd_outer_joined[:10]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -576,11 +668,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "f2f68949-61c8-46b4-a39e-bcfb3872c4fd",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "prob_priori_frase_positiva = T_positivos/T_original\n",
+    "prob_priori_frase_negativa = T_negativos/T_original\n",
+    "\n",
+    "log_prob_priori_frase_positiva = math.log(prob_frase_positiva, 10)\n",
+    "log_prob_priori_frase_negativa = math.log(prob_frase_negativa, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "902fd76a-63fd-4cd2-a795-f1482a043c57",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "probs_palavras = {}\n",
+    "\n",
+    "for e in rdd_outer_joined:\n",
+    "    # probs_palavras[palavra] = (prob_positiva, prob_negativa)\n",
+    "    probs_palavras[e[0]] = (e[1][0], e[1][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "d93dabc0-c374-4d10-812c-1024a52bd60d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def naive_bayes(frase, p_P, p_N, p_Palavras):\n",
+    "    prob_frase_positiva = p_P\n",
+    "    prob_frase_negativa = p_N\n",
+    "    \n",
+    "    for palavra in frase.split():\n",
+    "        palavra = ''.join(filter(lambda x: sem_pontuacao(x), palavra))\n",
+    "        prob_frase_positiva += p_Palavras[palavra][0]\n",
+    "        prob_frase_negativa += p_Palavras[palavra][1]\n",
+    "        \n",
+    "    if prob_frase_positiva > prob_frase_negativa:\n",
+    "        return 2\n",
+    "    return 1        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "4ca4c844-3207-4f46-b43a-ec1370fcaefa",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Positivo! =)\n"
+     ]
+    }
+   ],
+   "source": [
+    "sent = naive_bayes(\"The sky is so blue i love my life\", log_prob_priori_frase_negativa, log_prob_priori_frase_negativa, probs_palavras)\n",
+    "if sent == 2:\n",
+    "    print(\"Positivo! =)\")\n",
+    "elif sent == 1:\n",
+    "    print(\"Negativo! =(\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -616,11 +779,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "c147d964-8720-43fa-a8e3-0610394a752f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "diferencas_negativo = []\n",
+    "diferencas_positivo = []\n",
+    "for e in rdd_outer_joined:\n",
+    "    try:\n",
+    "        diferencas_negativo.append((e[0], (e[1][1]-e[1][0])))\n",
+    "    except TypeError:\n",
+    "        diferencas_negativo.append((e[0], None))\n",
+    "    try:\n",
+    "        diferencas_positivo.append((e[0], (e[1][0]-e[1][1])))\n",
+    "    except TypeError:\n",
+    "        diferencas_positivo.append((e[0], None))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "94eeb7fb-1a79-4f85-b919-e8d9c85c6309",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'<' not supported between instances of 'NoneType' and 'float'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[59], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdiferencas_negativo\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msort\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m diferencas_positivo\u001b[38;5;241m.\u001b[39msort(key \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mlambda\u001b[39;00m x: x[\u001b[38;5;241m1\u001b[39m])\n",
+      "\u001b[0;31mTypeError\u001b[0m: '<' not supported between instances of 'NoneType' and 'float'"
+     ]
+    }
+   ],
+   "source": [
+    "diferencas_negativo.sort(key = lambda x: x[1])\n",
+    "diferencas_positivo.sort(key = lambda x: x[1])"
+   ]
   },
   {
    "cell_type": "markdown",
